# cloudflare-dynamic-dns

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/src/: cloudflare_client.py  dns_updater.py  ip_detector.py  models.py
config/: records.example.json
tests/: conftest.py  test_cloudflare_client.py  test_config.py  test_dns_updater.py  test_ip_detector.py
